Adding different means of connection